Fix some alignments

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2691,7 +2691,7 @@ input, select, textarea {
 				font-size: 0.8em;
 				height: 2.5em;
 				left: 0;
-				line-height: 2.35em;
+				line-height: 2.2em;
 				position: absolute;
 				text-align: center;
 				top: 0;
@@ -4036,6 +4036,7 @@ input, select, textarea {
 
 		#footer .inner .contact {
 			width: calc(50% - 1.5em);
+            margin: 0;
 		}
 
 		#footer .inner .copyright {
